fix: disable banner button hover state on mobile

--- a/src/components/banner/bannerMain/BannerMain.module.css
+++ b/src/components/banner/bannerMain/BannerMain.module.css
@@ -45,8 +45,7 @@
 
         button {
             font-size: 18px;
-            padding: 12px 19px;
-            border: 2px solid var(--clr-salt);
+            padding: 10px 14px;
         }
     }
 
@@ -57,8 +56,7 @@
 
         button {
             margin-top: 16px;
-            padding: 10px 12px;
-            border: 2px solid var(--clr-salt);
+            padding: 9px 12px;
             font-size: 16px;
         }
     }
@@ -69,11 +67,14 @@
         }
 
         button {
-            font-size: 134x;
+            font-size: 16px;
             font-weight: 500;
-            padding: 10px 14px;
-            border: none;
             border-radius: 4px;
+
+            &:hover {
+                background-color: var(--clr-pepper);
+                color: var(--clr-salt);
+            }
         }
     }
 }
