--- a/src/components/banner/bannerReuse/BannerReuse.module.css
+++ b/src/components/banner/bannerReuse/BannerReuse.module.css
@@ -57,8 +57,8 @@
         }
 
         button {
-            font-size: 14px;
-            padding: 7px 14px;
+            font-size: 15px;
+            padding: 10px 14px;
             border: 2px solid var(--clr-salt);
         }
     }
@@ -79,8 +79,8 @@
         }
 
         button {
-            font-size: 13px;
-            padding: 7px 13px;
+            font-size: 14px;
+            padding: 9px 12px;
             border: 2px solid var(--clr-salt);
         }
     }
@@ -95,10 +95,14 @@
         }
 
         button {
-            font-size: 15px;
+            font-size: 16px;
             font-weight: 500;
-            padding: 9px 12px;
             border-radius: 4px;
+
+            &:hover {
+                background-color: inherit;
+                color: inherit;
+            }
         }
     }
 }
